# testpypackage

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  dependabot-automerge.yml  pytest.yml
tests/: test_sample.py
