[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testpypackage"
version = "0.1.0"
description = "A test Python package"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy==2.0.0",
    "scipy==1.13.1",
    "h5py==3.13.0",
    "PyTools_QOL==0.0.2",
    "pytest==8.3.4",
    "pyevtk==1.5.0",
    "matplotlib==3.7.4",
    "pandas==2.0.0",
    "scikit-learn==1.0.2",
    "scikit-image==1.0.1",
    "six==1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
